// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generate APIKEY - generate:intent Fetch intent 1`] = `
"import { FetchData, TAPIKEYAuthContext,  } from '@bearer/intents'
// Uncomment this line if you need to use Client
// import Client from './client'

export default class FetchDataIntentIntent {
  static intentType: any = FetchData

  
}
"
`;

exports[`Generate APIKEY - generate:intent Save intent 1`] = `
"import { SaveState, TAPIKEYAuthContext,  } from '@bearer/intents'
// Uncomment this line if you need to use Client
// import Client from './client'

export default class SaveIntentIntent {
  static intentType: any = SaveState

  
}
"
`;

exports[`Generate BASIC - generate:intent Fetch intent 1`] = `
"import { FetchData, TBASICAuthContext,  } from '@bearer/intents'
// Uncomment this line if you need to use Client
// import Client from './client'

export default class FetchDataIntentIntent {
  static intentType: any = FetchData

  
}
"
`;

exports[`Generate BASIC - generate:intent Save intent 1`] = `
"import { SaveState, TBASICAuthContext,  } from '@bearer/intents'
// Uncomment this line if you need to use Client
// import Client from './client'

export default class SaveIntentIntent {
  static intentType: any = SaveState

  
}
"
`;

exports[`Generate NONE - generate:intent Fetch intent 1`] = `
"import { FetchData, TNONEAuthContext,  } from '@bearer/intents'
// Uncomment this line if you need to use Client
// import Client from './client'

export default class FetchDataIntentIntent {
  static intentType: any = FetchData

  
}
"
`;

exports[`Generate NONE - generate:intent Save intent 1`] = `
"import { SaveState, TNONEAuthContext,  } from '@bearer/intents'
// Uncomment this line if you need to use Client
// import Client from './client'

export default class SaveIntentIntent {
  static intentType: any = SaveState

  
}
"
`;

exports[`Generate OAUTH2 - generate:intent Fetch intent 1`] = `
"import { FetchData, TOAUTH2AuthContext,  } from '@bearer/intents'
// Uncomment this line if you need to use Client
// import Client from './client'

export default class FetchDataIntentIntent {
  static intentType: any = FetchData

  
}
"
`;

exports[`Generate OAUTH2 - generate:intent Save intent 1`] = `
"import { SaveState, TOAUTH2AuthContext,  } from '@bearer/intents'
// Uncomment this line if you need to use Client
// import Client from './client'

export default class SaveIntentIntent {
  static intentType: any = SaveState

  
}
"
`;
